--- a/src/Component/Shopping/Shopping.scss
+++ b/src/Component/Shopping/Shopping.scss
@@ -12,7 +12,7 @@
 .shopping-items-container {
     display: grid;
     grid-auto-columns: minmax(10rem, auto);
-    grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
     grid-gap: 1rem;
 }
 .shopping-items-name-price
@@ -61,6 +61,9 @@
     font-size: 1rem;
     line-height: 2rem;
     padding: 0 5px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .shopping-item-display {
   text-decoration: line-through;
@@ -94,8 +97,15 @@
   line-height: 2rem;
 }
 
+@media only screen and (min-width: 399px) {
+  .shopping-items-container {
+    grid-auto-columns: minmax(10rem, auto);
+    grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+  }
+  
+}
 
-@media only screen and (min-width: 1023px) {
+@media only screen and (min-width: 1025px) {
     .shopping-item-addtocart {
       color:#3bb2c7;
       border: 1px solid #3bb2c7;
